# xrtpy

./: README.md  setup.cfg
.github/workflows/: testing.yml
docs/: conf.py
requirements/: docs.txt
